k8s/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: apps
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
